[package]
name = "localsnd"
version = "0.5.11"
edition = "2024"
authors = ["zpp0196 <zpp0196@gmail.com>", "github.com/pepa65"]
description = "CLI implementation of localsend"
repository = "https://github.com/pepa65/localsnd"
documentation = "https://docs.rs/localsnd"
readme = "README.md"
license = "MIT"
keywords = ["cli", "localsend"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target = "x86_64-unknown-linux-musl"
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.6"
async-trait = "0.1.77"
axum = "0.8.8"
clap = { version = "4.4.18", features = ["derive", "env"] }
colored = "3"
comfy-table = "7.1.0"
ctrlc = "3.4.2"
futures-util = "0.3.31"
hostname = "0.4.2"
humansize = "2.1.3"
indicatif = "0.18"
inquire = "0.9"
itertools = "0.14"
linked-hash-map = "0.5.6"
log = "0.4.20"
md5 = "0.8.0"
mime_guess = "2.0.5"
once_cell = "1.21.3"
openssl-sys = { version = "0.9.104", features = ["vendored"] }
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5"
thiserror = "2.0.17"
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7.18"
uuid = { version = "1.19", features = ["v4"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
